z-index did not address issue.  Attempt to address shadow artifacts by removing text shadows via .shadows class

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -125,6 +125,9 @@
 
   /*LANDSCAPE FIXES*/
   @media (orientation: landscape) {
+    .shadows {
+      text-shadow: none;
+    }
     #warning {
       display: none;
     }
